docs: Update docs after recent changes
- update usage
- replace launcher docs

Fixes https://github.com/scalacenter/bloop/issues/2417